--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 	background: #333;
 	color: #000;
 	font-family: 'Roboto', sans-serif;
-	min-height: 100vh;
+/*	min-height: 100vh;*/
 	overflow-x: hidden;
 	max-width: 1680px;
 	margin: 0 auto;
@@ -547,17 +547,10 @@ footer{
 	text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff;
 }
 
-@media(min-width: 1100px){
-	.header-heading{
-		font-size: 275px;
-		line-height: calc(100vh - 60px);
-		}
-}
-
 @media(max-width: 1100px){
 	.header-heading {
-		font-size: 40vh;
-		line-height: 40vh;
+		font-size: 40vw;
+		line-height: 40vw;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
